2008-08-24  Andreas Schwab  <schwab@suse.de>

	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Do proper
	extension when calculating difference of offsets.

2008-08-24  Alan Modra  <amodra@bigpond.net.au>

	* configure.in: Update a number of obsolete autoconf macros.
	* aclocal.m4: Regenerate.

2008-08-23  Andreas Schwab  <schwab@suse.de>

	* opncls.c (find_separate_debug_file): Use the canonical
	absolute name of the bfd object for finding the debug file in
	the global debugfile directory.

2008-08-22  Jakub Jelinek  <jakub@redhat.com>

	Fix PR ld/3290 regression for cross-files DW_FORM_ref_addr relocations.
	* elflink.c (elf_link_add_object_symbols): Make debug symbols local
	now only for non-RELOCATABLE targets.

2008-08-20  Bob Wilson  <bob.wilson@acm.org>

	* elf-bfd.h (elf_object_id): Add XTENSA_ELF_TDATA.
	* elf32-xtensa.c (elf_howto_table): Add TLS relocations.
	(elf_xtensa_reloc_type_lookup): Likewise.
	(TCB_SIZE): Define.
	(elf_xtensa_link_hash_entry): New.
	(GOT_UNKNOWN, GOT_NORMAL, GOT_TLS_GD, GOT_TLS_IE, GOT_TLS_ANY): Define.
	(elf_xtensa_hash_entry): Define.
	(elf_xtensa_obj_tdata): New.
	(elf_xtensa_tdata): Define.
	(elf_xtensa_local_got_tls_type): Define.
	(elf_xtensa_local_tlsfunc_refcounts): Define.
	(is_xtensa_elf): Define.
	(elf_xtensa_mkobject): New.
	(elf_xtensa_link_hash_table): Add tlsbase field.
	(elf_xtensa_link_hash_newfunc): New.
	(elf_xtensa_link_hash_table_create): Use elf_xtensa_link_hash_newfunc.
	Create an entry for "_TLS_MODULE_BASE_" and save it in tlsbase field.
	(elf_xtensa_copy_indirect_symbol): New.
	(elf_xtensa_check_relocs): Rewrite to handle TLS relocations.
	(elf_xtensa_gc_sweep_hook): Likewise.
	(elf_xtensa_allocate_dynrelocs): Optimize away GOT entries for
	TLSDESC_FN relocations when an IE reference is seen.
	(elf_xtensa_allocate_local_got_size): Likewise.
	(elf_xtensa_always_size_sections): New.
	(dtpoff_base, tpoff): New.
	(elf_xtensa_do_reloc): Handle TLS relocations.
	(replace_tls_insn): New.